--- a/style.css
+++ b/style.css
@@ -7,6 +7,17 @@ h1{
     text-align: center;
 }
 
+#favoritesButton{
+  border-radius: 5px;
+  color: rgb(7, 7, 108);
+  background-color: aliceblue;
+  
+}
+
+.foodItem:hover{
+  background-color: rgb(244, 212, 170);
+}
+
 .pageItem, header{
     margin-left: 10%;
     margin-right: 10%;
@@ -31,6 +42,7 @@ nav div{
     border-radius: 5px;
     margin-top: 20px;
     padding-bottom: 15px;
+    user-select: none;
 }
 
 .restaurantInfo, .pageItem p{
